<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/panel"
    android:layout_margin="2dp"
    android:background="@color/ch7">

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch7_ex6"/>

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch7_ex6_desc"/>

    <TextView
        android:id="@+id/started_by_alarm"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="36px"
        android:text="@string/was_not_started_by_alarm"/>

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_get_activity"/>

    <Button
        android:id="@+id/get_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm_get_activity"
        android:layout_gravity="center" />

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_get_activities"/>

    <Button
        android:id="@+id/get_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm_get_activities"
        android:layout_gravity="center" />

</LinearLayout>
