<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/panel"
    android:layout_margin="2dp"
    android:background="@color/ch7">

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch7_ex2"/>

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch7_ex2_desc"/>

    <TextView
        style="@style/text"
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_5_sec"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule"/>

        <Button
            android:id="@+id/unschedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unschedule"/>

    </LinearLayout>

    <TextView
        style="@style/text"
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_to_receive"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"/>

        <Button
            android:id="@+id/unregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unregister"/>

    </LinearLayout>

</LinearLayout>
