<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/panel"
    android:layout_margin="2dp"
    android:background="@color/ch7">

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch7_ex5"/>

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch7_ex5_desc"/>

    <EditText
        android:id="@+id/prime_to_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comma_nth_prime"
        android:inputType="phone" />

    <TextView
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_2_mins"/>

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:layout_gravity="center" />

</LinearLayout>
