<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grid"
    style="@style/panel"
    android:layout_margin="2dp"
    android:background="#ffff9900"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AsyncTaskActivity">

    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch2_medley"/>

    <TextView
        style="@style/text"
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch2_medley_desc"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        android:text="@string/no_result_yet"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/do_on_main_thread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_on_main_thread"/>

            <Button
                android:id="@+id/do_in_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_in_background"/>

            <Button
                android:id="@+id/clear_then_do_in_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_in_background_with_feedback"/>

            <Button
                android:id="@+id/do_in_background_with_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_in_background_with_progress"/>

            <Button
                android:id="@+id/do_in_background_with_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_in_background_with_cancel"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
