<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/panel"
    android:layout_margin="2dp"
    android:background="@color/ch6">

    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch6_ex1" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch6_ex1_desc" />

    <EditText
        android:id="@+id/prime_to_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comma_nth_prime"
        android:inputType="phone" />

    <Button
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/results"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>
