<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid"
    style="@style/panel"
    android:layout_margin="2dp"
    android:background="#ffff9900"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        style="@style/title"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch2_ex6"/>

    <TextView
        style="@style/text"
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ch2_ex6_desc"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/result_text_size"
        android:text="@string/no_result_yet"/>

    <Button
        android:id="@+id/go"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_or_exception"/>

</LinearLayout>
